# xtall_filters_optimizer

./: .gitignore  LICENSE  README.md  README_ru.md  pyproject.toml  requirements.txt
docs/: DOCUMENTATION.md  DOCUMENTATION_en.md
examples/: ideal_filter.json  ladder_10p696_10p702MHz.json  ladder_nonideal_opt.json  ladder_nonideal_opt_mps_slope40.json  ladder_nonideal_opt_slope20_750.json  ladder_nonideal_opt_slope40.json  ladder_optimize.json  nonideal_filter.json
examples/ladder_10p7MHz_out/: target_meta.json
examples/target_run/: target_meta.json
scripts/: rebuild_optimization_gif_yzoom.py
xtal_filters/: __init__.py  __main__.py  circuit.py  cli.py  config.py  dtypes.py  elements.py  engine.py  interp.py  loss.py  loss_weights.py  mna.py  optimize.py  parameters.py  parametrization.py  response.py  sweep.py  target_io.py  viz.py
