[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "xtal-filters"
version = "0.1.0"
description = "JSON-driven quartz filter AC analysis and optimization (PyTorch)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "pillow>=10.0",
  "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["xtal_filters*"]
